SonarQube bug fixes